# Sidescroller

./: .gitignore  CMakeLists.txt  README.md  Sidescroller.sln  UML_Diagram.puml  UML_EngineStateChart.puml  UML_PlayerStateChart.puml
Sidescroller/: AABBCollider.cpp  AABBCollider.h  Audio.cpp  Audio.h  Box.cpp  Box.h  Camera.cpp  Camera.h  Collidable.cpp  Collidable.h  CollisionHandler.cpp  CollisionHandler.h  DynamicCollider.cpp  DynamicCollider.h  Entity.h  EventHandler.cpp  EventHandler.h  GLRenderer.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Renderable.h  Renderer.cpp  Renderer.h  ResetBox.h  Scene.h  SceneHandler.cpp  SceneHandler.h  Sidescroller.vcxproj  Sidescroller.vcxproj.filters  StaticCollider.cpp  StaticCollider.h  Texture.cpp  Texture.h  Tile.h  (+10 more)
Sidescroller/core/: EventHandler.h  Game.h  Renderable.h  Scene.h  Texture.cpp
Sidescroller/entities/: Audio.h  Box.h  Player.h  TiledMap.h
Sidescroller/physics/: AABBCollider.cpp
Sidescroller/tilesets/: Level1.tmx  Level2.tmx  test_level - Copy.tmx  test_level.tmx  tileset.tsx  tilesheet_complete.tsx
Sidescroller/util/: TiledParser.cpp  TiledParser.h  Tileset.h  Vector2D.cpp  logger.cpp  logger.h
Sidescroller/util/tiled/: TiledParser.h
cmake/Modules/: FindSDL2_mixer.cmake
dependencies/SDL2/: Readme.txt
resources/animations/: playerIdle.xml  playerJump.xml  playerWalk.xml  playerWalkRight.xml
resources/tilesets/: Level1.tmx  Level2.tmx
src/: CMakeLists.txt  main.cpp
src/core/: AnimatedSprite.h  Animation.h  AssetManager.cpp  AssetManager.h  AssetPool.cpp  AssetPool.h  CMakeLists.txt  Entity.cpp  Entity.h  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  KeyboardEvent.h  Renderable.h  Renderer.cpp  Renderer.h  Scene.h  SceneHandler.cpp  SceneHandler.h  Singleton.h  Sound.cpp  Sound.h  SoundMixer.cpp  SoundMixer.h  Texture.cpp  Texture.h
src/core/events/: CMakeLists.txt  Event.h  KeyboardEvent.h
src/entities/: Box.cpp  Box.h  BreakableBox.cpp  BreakableBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Coin.cpp  Coin.h  Goal.cpp  Goal.h  MusicPlayer.cpp  MusicPlayer.hpp  Patroller.cpp  Patroller.h  Player.cpp  Player.h  PlayerIdle.cpp  PlayerIdle.h  PlayerJump.cpp  PlayerJump.h  PlayerSpawner.cpp  PlayerSpawner.h  PlayerState.cpp  PlayerState.h  PlayerWalk.cpp  PlayerWalk.h  Projectile.cpp  Projectile.h  ResetBox.h  TiledMap.h
src/physics/: AABBCollider.cpp  AABBCollider.h  CMakeLists.txt
src/tests/: CMakeLists.txt  Collision_test.cpp  Collision_test.h  Unit.h  Vector2D_test.cpp  Vector2D_test.h
src/util/: CMakeLists.txt  Vector2D.cpp  Vector2D.h  logger.cpp  logger.h
src/util/tiled/: CMakeLists.txt  Tile.h  TiledParser.cpp  TiledParser.h  Tileset.h
